--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -5,7 +5,7 @@ html
   body
     .grid-container
       #app.Carousel
-      #item-info.ProductDetails
+      #app2.ProductDetails
       #app3.Reviews
       #app4.MoreFrom
     script.
