--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -10,7 +10,7 @@ html
       #app4.MoreFrom
     script.
       window.productId = #{productId};
-    script(src='http://ec2-54-183-28-128.us-west-1.compute.amazonaws.com:3003/build.js')
+    script(src='http://localhost:3003/build.js')
     script(src='http://localhost:3002/bundle.js')
     script(src='http://localhost:3004/bundle.js')
     script(src='http://localhost:3000/bundle.js')
